--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <title>Document</title>
 </head>
 <body>
-    <p id="butt"><i class="fa fa-times"></i></i></p>
     <div id="slide2">
+        <p id="butt"><i class="fa fa-bars"></i></i></p>
         <div class="flex">
             <a class="item" href="">ITEM 1</a>
             <a class="item" href="">ITEM 2</a>
